--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,5 +4,9 @@
   <style name="Theme.AliucordManager.SplashScreen" parent="Theme.SplashScreen">
     <item name="windowSplashScreenAnimatedIcon">@drawable/ic_launcher_foreground</item>
     <item name="postSplashScreenTheme">@style/Theme.AppCompat.NoActionBar</item>
+
+    <!-- For some reason, I need this after updating androidx-splashscreen???? -->
+    <item name="android:windowActionBar">false</item>
+    <item name="android:windowNoTitle">true</item>
   </style>
 </resources>
