feat: update all material icons and fix sizing
There's been a bit of a redesign since the last time I obtained most of these icons + new tint.

--- a/app/src/main/res/drawable/ic_arrow_down_small.xml
+++ b/app/src/main/res/drawable/ic_arrow_down_small.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="960"
     android:viewportHeight="960">
   <path
-      android:fillColor="#FFFFFFFF"
-      android:pathData="M480,604.5q-8.96,0 -17.15,-3.1 -8.2,-3.1 -14.91,-9.81L264.17,407.83Q251.5,395.15 251.5,376t12.67,-31.83Q276.85,331.5 296,331.5t31.83,12.67L480,496.35l152.17,-152.17Q644.85,331.5 664,331.5t31.83,12.67Q708.5,356.85 708.5,376t-12.67,31.83L512.07,591.59q-6.72,6.72 -14.91,9.81Q488.96,604.5 480,604.5Z" />
+      android:fillColor="#e8eaed"
+      android:pathData="M480,599q-8,0 -15,-2.5t-13,-8.5L268,404q-11,-11 -11,-28t11,-28q11,-11 28,-11t28,11l156,156 156,-156q11,-11 28,-11t28,11q11,11 11,28t-11,28L508,588q-6,6 -13,8.5t-15,2.5Z" />
 </vector>
