--- a/app/src/main/res/drawable/ic_arrow_up_small.xml
+++ b/app/src/main/res/drawable/ic_arrow_up_small.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="960"
     android:viewportHeight="960">
   <path
-      android:fillColor="#FFFFFFFF"
-      android:pathData="M480,439.65 L327.83,591.83Q315.15,604.5 296,604.5t-31.83,-12.67Q251.5,579.15 251.5,560t12.67,-31.83l183.76,-183.76q13.67,-13.67 32.06,-13.67t32.06,13.67l183.76,183.76Q708.5,540.85 708.5,560t-12.67,31.83Q683.15,604.5 664,604.5t-31.83,-12.67L480,439.65Z" />
+      android:fillColor="#e8eaed"
+      android:pathData="M480,432 L324,588q-11,11 -28,11t-28,-11q-11,-11 -11,-28t11,-28l184,-184q12,-12 28,-12t28,12l184,184q11,11 11,28t-11,28q-11,11 -28,11t-28,-11L480,432Z" />
 </vector>
