--- a/app/src/main/res/drawable/ic_code.xml
+++ b/app/src/main/res/drawable/ic_code.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="960"
     android:viewportHeight="960">
   <path
-      android:fillColor="#FFFFFFFF"
+      android:fillColor="#e8eaed"
       android:pathData="m193,481 l155,155q11,11 11,28t-11,28q-11,11 -28,11t-28,-11L108,508q-6,-6 -8.5,-13T97,480q0,-8 2.5,-15t8.5,-13l184,-184q12,-12 28.5,-12t28.5,12q12,12 12,28.5T349,325L193,481ZM767,479L612,324q-11,-11 -11,-28t11,-28q11,-11 28,-11t28,11l184,184q6,6 8.5,13t2.5,15q0,8 -2.5,15t-8.5,13L668,692q-12,12 -28,11.5T612,691q-12,-12 -12,-28.5t12,-28.5l155,-155Z" />
 </vector>
