--- a/app/src/main/res/drawable/ic_protect_warning.xml
+++ b/app/src/main/res/drawable/ic_protect_warning.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="960"
     android:viewportHeight="960">
   <path
-      android:fillColor="#FFFFFFFF"
+      android:fillColor="#e8eaed"
       android:pathData="M480,640q17,0 28.5,-11.5T520,600q0,-17 -11.5,-28.5T480,560q-17,0 -28.5,11.5T440,600q0,17 11.5,28.5T480,640ZM480,480q17,0 28.5,-11.5T520,440v-120q0,-17 -11.5,-28.5T480,280q-17,0 -28.5,11.5T440,320v120q0,17 11.5,28.5T480,480ZM480,876q-7,0 -13,-1t-12,-3q-135,-45 -215,-166.5T160,444v-189q0,-25 14.5,-45t37.5,-29l240,-90q14,-5 28,-5t28,5l240,90q23,9 37.5,29t14.5,45v189q0,140 -80,261.5T505,872q-6,2 -12,3t-13,1ZM480,796q104,-33 172,-132t68,-220v-189l-240,-90 -240,90v189q0,121 68,220t172,132ZM480,480Z" />
 </vector>
