--- a/app/src/main/res/drawable/ic_launcher_monochrome.xml
+++ b/app/src/main/res/drawable/ic_launcher_monochrome.xml
@@ -4,17 +4,13 @@
     android:viewportWidth="108"
     android:viewportHeight="108">
   <path
-      android:fillAlpha="0.9"
-      android:fillColor="#000000"
-      android:pathData="m46.85,70.39 l2.08,-6.94l0,0l-2.08,6.94c2.63,1.17 5.6,1.8 8.58,1.8 2.18,0 4.52,-0.44 6.79,-1.37l0,0c3.47,-1.42 6.75,-4.01 8.95,-8.19l-9.63,-4.33c-2.5,4.85 -9.26,3.68 -12.06,3.66" />
+      android:fillColor="#00000000"
+      android:pathData="M49.28,55.58l0,-7.37M60.93,44.78l6.47,-2.48c-2.93,-6.27 -8.34,-8.11 -12.82,-8.11c-7.3,0 -14.51,4.08 -14.51,12.04l0,12.15c0,0.86 0.09,1.68 0.24,2.45M47.42,69.01c2.15,0.93 4.59,1.39 7.01,1.39c4.58,0 10.08,-2.19 13.12,-7.92l-8.09,-3.36c0,0 -1.28,4.43 -5.27,4.48"
+      android:strokeWidth="2.83"
+      android:strokeColor="#000000" />
   <path
-      android:fillAlpha="0.9"
-      android:fillColor="#000000"
-      android:pathData="m53.81,26.37c-8.77,0 -17.42,4.93 -17.42,14.54l0,14.66c0,1.01 0.15,1.94 0.33,2.85l2.22,-6.19l8.51,0L47.44,43.58L43.44,39.67 47.82,27.46l10.19,0l4.2,11.44 6.97,-2.74C65.66,28.59 59.18,26.37 53.81,26.37Z" />
-  <path
-      android:pathData="m55.71,63.56c-4.46,-0.1 -5.1,-0.09 -7.69,-0.13l-2.75,8.64L33.26,72.07L39.83,53.76L57.15,53.76L54.08,41.16l-0.31,0l-1.91,7.39 -7.53,-7.35 4.38,-12.2l10.19,0L74.72,72.07L62.07,72.07l-0.78,-1.82"
-      android:strokeWidth="3.3"
-      android:strokeColor="#000000"
-      android:strokeLineCap="butt"
-      android:strokeLineJoin="miter" />
+      android:fillColor="#00000000"
+      android:pathData="M54.22,63.61l-5.19,0l-2.29,7.16L36.72,70.76l5.47,-15.17l8.91,0l5.53,0l-2.55,-10.44l-0.26,0l-1.59,6.12l-6.28,-6.09l3.65,-10.1L58.09,35.09l13.18,35.68l-10.01,0l-0.8,-1.5"
+      android:strokeWidth="2.83"
+      android:strokeColor="#000000" />
 </vector>
