feat: custom components UI
Adds support for selecting already-imported custom components from the patch options screen -> component options screen.

--- a/app/src/main/res/drawable/ic_security.xml
+++ b/app/src/main/res/drawable/ic_security.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="960"
     android:viewportHeight="960">
   <path
-      android:pathData="M480,880q-139,-35 -229.5,-159.5T160,444v-244l320,-120 320,120v244q0,152 -90.5,276.5T480,880ZM480,796q97,-30 162,-118.5T718,480L480,480v-315l-240,90v207q0,7 2,18h238v316Z"
-      android:fillColor="#FFFFFF"/>
+      android:fillColor="#FFFFFF"
+      android:pathData="M480,880q-139,-35 -229.5,-159.5T160,444v-244l320,-120 320,120v244q0,152 -90.5,276.5T480,880ZM480,796q97,-30 162,-118.5T718,480L480,480v-315l-240,90v207q0,7 2,18h238v316Z" />
 </vector>
